Upgrade to spring boot 3